#pragma once

namespace Pronounce {
	/**
	 * @brief Abstract class to be used in both the pure pursuit simulator and on the robot.
	 * 
	 */
	class AbstractDrivetrain {
	private:
		
	public:
		AbstractDrivetrain();

		~AbstractDrivetrain();
	};
		
} // namespace Pronounce
